added links to go to each website

--- a/HTML CrashCourse/index.html
+++ b/HTML CrashCourse/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Crash Course</title>
 </head>
+
+<a href="blogTest.html">Go to blog</a>
 <body>
     <!-- headings -->
     <h1>Heading One</h1>
