--- a/navbar.html
+++ b/navbar.html
@@ -11,19 +11,21 @@
             display: flex;
             justify-content: flex-end;
             align-items: center;
+            flex-wrap: wrap;
         }
 
         .item{
-            padding: 0 10px 0 10px;
-            width: 10%;
+            margin: 20px;
             color: white;
             font-weight: 200;
         }
 
         .image{
-            width: 50%;
-            flex-basis: 30%;
-            max-block-size: -webkit-fill-available;
+            width: 200px;
+        }
+
+        .item:nth-child(1){
+            margin-right: auto;
         }
     </style>
 </head>
