--- a/Responsive Website Project/contact.html
+++ b/Responsive Website Project/contact.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style2.css">
-    <title>Skin Pet Holders | About us</title>
+    <title>Skin Pet Holders | Contact Us</title>
 </head>
 <body>
     <header>
-        <h2>About Us</h2>
+        <h2>Contact Us</h2>
     </header>
-
+    
     <!--Navbar-->
     <nav>
         <ul>
@@ -32,17 +31,12 @@
             </li>
         </ul>
     </nav>
-
+    
     <!-- Section A-->
     <section>
-        <h3>Why we created our company</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate explicabo libero recusandae ad repellendus aperiam optio nihil labore ea.
-        </p>
-
-        <h3>How our products are made</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate explicabo libero recusandae ad repellendus
-            aperiam optio nihil labore ea.
-        </p>
+        <p>Email: skinpetholders@gmail.com</p>
+        <p>Phone: 1(888)222-3333</p>
+        <p>Social media:</p>
     </section>
     <!--Form-->
     <section>
