--- a/Responsive Website Project/faq.html
+++ b/Responsive Website Project/faq.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style2.css">
-    <title>Skin Pet Holders | About us</title>
+    <link rel="stylesheet" href="style3.css">
+    <title>Pet Skin Holders | FAQ</title>
 </head>
 <body>
     <header>
-        <h2>About Us</h2>
+        <h2>Frequently Asked Questions</h2>
     </header>
-
     <!--Navbar-->
     <nav>
         <ul>
@@ -32,18 +31,23 @@
             </li>
         </ul>
     </nav>
+    
+    <!--Section A-->
 
-    <!-- Section A-->
     <section>
-        <h3>Why we created our company</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate explicabo libero recusandae ad repellendus aperiam optio nihil labore ea.
-        </p>
-
-        <h3>How our products are made</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate explicabo libero recusandae ad repellendus
-            aperiam optio nihil labore ea.
-        </p>
+        <h3>How long does it take to ship your items?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, illum impedit ex vel nobis iure porro quas et fuga obcaecati?
+            </p>
+        <h3>Do you accept returns?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, illum impedit ex vel nobis iure porro
+                quas et fuga obcaecati?
+            </p>
+        <h3>Are your products customizable?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, illum impedit ex vel nobis iure porro
+                quas et fuga obcaecati?
+            </p>
     </section>
+
     <!--Form-->
     <section>
         <h1>Subcribe to our newsletter</h1>
