--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style1.css">
-    <title>Pet Skin Holders</title>
+    <title>Pet Skin Holders | Home</title>
 </head>
 <body>
     <header>
@@ -27,7 +27,10 @@
                 <a href="">Products</a>
             </li>
             <li>
-                <a href="">Cart</a>
+                <a href="">FAQ</a>
+            </li>
+            <li>
+                <a href="">Contact Us</a>
             </li>
         </ul>
     </nav>
@@ -56,6 +59,7 @@
     
    </main>
    
+   <!--Form-->
     <section>
         <h1>Subcribe to our newsletter</h1>
         <form action="">
@@ -64,6 +68,7 @@
         </form>
     </section>
 
+    <!--Footer-->
     <footer>
         <p>Pet Skin Holders, Copyright &copy; 2022</p>
         <p>Project by Veronica Rodovinsky</p>
