--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -4,45 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style1.css">
-    <title>Pet Skin Holders | Home</title>
+    <link rel="stylesheet" href="./CSS/style1.css">
+    <title>Tissues | Home</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to Pet Skin Holders | Tissue boxes that look like your favourite animals</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit placeat ducimus temporibus vel quod repellendus eum nobis, asperiores possimus. Neque!
-        </p>
-    </header>
 
     <!--Navbar-->
-    <nav>
-        <ul>
-            <li>
-                <a href="">Home</a>
-            </li>
-            <li>
-                <a href="">About Us</a>
-            </li>
-            <li>
-                <a href="">Products</a>
-            </li>
-            <li>
-                <a href="">FAQ</a>
-            </li>
-            <li>
-                <a href="">Contact Us</a>
-            </li>
-        </ul>
-    </nav>
+    <div id="navbar">
+<header>
+    <div class="item image"><img class="image" src="./images/tissue-box.png"></div>
+</header>
 
+<navbar>
+    <div class="item">
+    <ul>
+        <li>
+            <div class="item"><a href="">Home</a></div>
+        </li>
+        <li>
+            <div class="item"><a href="">About Us</a></div>
+        </li>
+        <li>
+            <div class="item"><a href="">Products</a></div>
+        </li>
+        <li>
+            <div class="item"><a href="">FAQ</a></div>
+        </li>
+        <li>
+            <div class="item"><a href="">Contact Us</a></div>
+        </li>
+    </ul>
+    </div>
+</navbar>
+</div>
+   
    <main>
     <!--Section A-->
-    <section>
-        <h3>We are not like other tissue brands</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quidem, veritatis nostrum quibusdam animi, possimus officia deleniti praesentium aut tempora perferendis hic enim facere obcaecati necessitatibus voluptate consequuntur autem placeat.
-        </p>
-    </section>
+    <div id="section-a">
+        <section>
+            <h1>Welcome to Tissues | Tissue boxes that look like your favourite animals</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit placeat ducimus temporibus vel quod
+            repellendus eum nobis, asperiores possimus. Neque!
+            </p>
+        </section>
+    </div>
     <!--Section B-->
+    <div id="section-b">
+        <section>
+            <h3>We are not like other tissue brands</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quidem, veritatis nostrum quibusdam animi, possimus officia deleniti praesentium aut tempora perferendis hic enim facere obcaecati necessitatibus voluptate consequuntur autem placeat.
+            </p>
+        </section>
+    </div>
+    <!--Section C-->
     <section>
         <ul>
             <li>
