--- a/Responsive Website Project/about.html
+++ b/Responsive Website Project/about.html
@@ -4,34 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style2.css">
-    <title>Skin Pet Holders | About us</title>
+    <link rel="stylesheet" href="./CSS/style2.css">
+    <title>Tissues | About us</title>
 </head>
 <body>
-    <header>
-        <h2>About Us</h2>
-    </header>
-
     <!--Navbar-->
-    <nav>
-        <ul>
-            <li>
-                <a href="">Home</a>
-            </li>
-            <li>
-                <a href="">About Us</a>
-            </li>
-            <li>
-                <a href="">Products</a>
-            </li>
-            <li>
-                <a href="">FAQ</a>
-            </li>
-            <li>
-                <a href="">Contact Us</a>
-            </li>
-        </ul>
-    </nav>
+    <div id="navbar">
+        <header>
+            <div class="item image"><img class="image" src="./images/tissue-box.png"></div>
+        </header>
+    
+        <navbar>
+            <div class="item">
+                <ul>
+                    <li>
+                        <div class="item"><a href="index.html">Home</a></div>
+                    </li>
+                    <li>
+                        <div class="item"><a href="about.html">About Us</a></div>
+                    </li>
+                    <li>
+                        <div class="item"><a href="products.html">Products</a></div>
+                    </li>
+                    <li>
+                        <div class="item"><a href="faq.html">FAQ</a></div>
+                    </li>
+                    <li>
+                        <div class="item"><a href="contact.html">Contact Us</a></div>
+                    </li>
+                </ul>
+            </div>
+        </navbar>
+    </div>
 
     <!-- Section A-->
     <section>
@@ -55,7 +59,7 @@
     
     <!--Footer-->
     <footer>
-        <p>Pet Skin Holders, Copyright &copy; 2022</p>
+        <p>Tissues, Copyright &copy; 2022</p>
         <p>Project by Veronica Rodovinsky</p>
     </footer>
 </body>
