--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -11,31 +11,31 @@
 
     <!--Navbar-->
     <div id="navbar">
-<header>
-    <div class="item image"><img class="image" src="./images/tissue-box.png"></div>
-</header>
+        <header>
+            <div class="item image"><img class="image" src="./images/tissue-box.png"></div>
+        </header>
 
-<navbar>
-    <div class="item">
-    <ul>
-        <li>
-            <div class="item"><a href="">Home</a></div>
-        </li>
-        <li>
-            <div class="item"><a href="">About Us</a></div>
-        </li>
-        <li>
-            <div class="item"><a href="">Products</a></div>
-        </li>
-        <li>
-            <div class="item"><a href="">FAQ</a></div>
-        </li>
-        <li>
-            <div class="item"><a href="">Contact Us</a></div>
-        </li>
-    </ul>
-    </div>
-</navbar>
+    <navbar>
+        <div class="item">
+        <ul>
+            <li>
+                <div class="item"><a href="index.html">Home</a></div>
+            </li>
+            <li>
+                <div class="item"><a href="about.html">About Us</a></div>
+            </li>
+            <li>
+                <div class="item"><a href="products.html">Products</a></div>
+            </li>
+            <li>
+                <div class="item"><a href="faq.html">FAQ</a></div>
+            </li>
+            <li>
+                <div class="item"><a href="contact.html">Contact Us</a></div>
+            </li>
+        </ul>
+        </div>
+    </navbar>
 </div>
    
    <main>
@@ -84,7 +84,7 @@
 
     <!--Footer-->
     <footer>
-        <p>Pet Skin Holders, Copyright &copy; 2022</p>
+        <p>Tissues, Copyright &copy; 2022</p>
         <p>Project by Veronica Rodovinsky</p>
     </footer>
 </body>
