--- a/Responsive Website Project/products.html
+++ b/Responsive Website Project/products.html
@@ -53,9 +53,9 @@
     </section>
     
     <!--Footer-->
-    <footer>
-        <p>Tissues, Copyright &copy; 2022</p>
-        <p>Project by Veronica Rodovinsky</p>
+    <footer id="main-footer" class="grid">
+        <div>Tissues, Copyright &copy; 2022</div>
+        <div>Project by Veronica Rodovinsky</div>
     </footer>
 </body>
 </html>
