--- a/Responsive Website Project/contact.html
+++ b/Responsive Website Project/contact.html
@@ -37,7 +37,12 @@
         </navbar>
     </div>
     
-    <!-- Section A-->
+    <!--Section A-->
+        <section id="section-a">
+            <h1>Contact Us</h1>
+        </section>
+    
+    <!-- Section B-->
     <section>
         <p>Email: tissues@gmail.com</p>
         <p>Phone: 1(888)222-3333</p>
