--- a/Responsive Website Project/about.html
+++ b/Responsive Website Project/about.html
@@ -48,14 +48,17 @@
             aperiam optio nihil labore ea.
         </p>
     </section>
-    <!--Form-->
-    <section>
-        <h1>Subcribe to our newsletter</h1>
-        <form action="">
-            <input type="email" placeholder="Enter Email">
-            <button type="submit">Subscribe</button>
-        </form>
-    </section>
+    
+</section>
+<!--Form-->
+<section id="newsletter">
+    <h3>Subscribe To Our Newsletter</h3>
+    <form action="">
+        <input type="email" placeholder="Enter email">
+        <button type="submit" class="button">Subscribe</button>
+
+    </form>
+</section>
     
     <!--Footer-->
     <footer id="main-footer" class="grid">
