--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -8,7 +8,7 @@
     <title>Tissues | Home</title>
 </head>
 <body>
-
+   
     <!--Navbar-->
     <div id="navbar">
         <header>
@@ -73,20 +73,23 @@
     
    </main>
    
-   <!--Form-->
-    <section>
-        <h1>Subcribe to our newsletter</h1>
-        <form action="">
-            <input type="email" placeholder="Enter Email">
-            <button type="submit">Subscribe</button>
-        </form>
-    </section>
+</section>
+<!--Form-->
+<section id="newsletter">
+    <h3>Subscribe To Our Newsletter</h3>
+    <form action="">
+        <input type="email" placeholder="Enter email">
+        <button type="submit" class="button">Subscribe</button>
+
+    </form>
+</section>
 
     <!--Footer-->
     <footer id="main-footer" class="grid">
         <div>Tissues, Copyright &copy; 2022</div>
         <div>Project by Veronica Rodovinsky</div>
     </footer>
+
 </body>
 </html>
 
