put form in container

--- a/Responsive Website Project/contact.html
+++ b/Responsive Website Project/contact.html
@@ -68,7 +68,7 @@
         </div>
     </section>
     <!--Form-->
-    
+    <div class="main">
     <form class="container">
         <div class="item">
             <div id="name">
@@ -100,6 +100,7 @@
         </div>
 
     </form>
+    </div>
 
     <!--Footer-->
     <footer id="main-footer" class="grid">
