added alternate image

--- a/Responsive Website Project/products.html
+++ b/Responsive Website Project/products.html
@@ -49,10 +49,14 @@
         <div class="product">
             <div id="cat-alternate"><img src="./images/cat.png"></div>
         </div>
-        <div class="product"><img src="./images/elephant.png"></div>
+        <div class="product">
+            <div id="elephant-alternate"><img src="./images/elephant.png"></div>
+        </div>
         <div class="product-name">Cat Tissue Cover <br> $20</div>
         <div class="product-name">Elephant Tissue Cover <br> $20</div>
-        <div class="product"><img src="./images/cat1.png"></div>
+        <div class="product">
+            <div id="cat1-alternate"><img src="./images/cat1.png"></div>
+        </div>
         <div class="product"><img src="./images/panda.png"></div>
         <div class="product-name">Orange Cat Tissue Cover <br> $20</div>
         <div class="product-name">Panda Tissue Cover <br>$20</div>
