--- a/Responsive Website Project/contact.html
+++ b/Responsive Website Project/contact.html
@@ -39,24 +39,12 @@
 
 
     
-    <!--Section A-->
-        <section id="section-a">
+    <!--Header-->
+        <section id="header">
             <h1>Contact Us</h1>
         </section>
 
     
-    <!-- Section B  
-        <h4>Email Us Here</h4>
-        <p>tissues@gmail.com</p>
-        <h4>Call Us Here</h4>
-        <p>1(888)222-3333</p>
-        <h4>Support Us On Social Media</h4>
-        <div class="social-media">
-            <a href="https://www.instagram.com/"><img src="./images/instagram.png"></a>
-            <a href="https://www.facebook.com/"><img src="./images/facebook.png"></a>
-            <a href="https://twitter.com/?lang=en"><img src="./images/twitter.png"></a>
-            <a href="https://www.pinterest.ca/"><img src="./images/pinterest.png"></a>
-        </div>-->
     <section id="section-b">
         <p>We are here to help. Visit our <a class="faq-link" href="faq.html">FAQ page</a> or contact us here if you have any questions.</p>
         <h4>Support Us On Social Media</h4>
