fixed submit button

--- a/Responsive Website Project/contact.html
+++ b/Responsive Website Project/contact.html
@@ -84,7 +84,7 @@
         </div>
         </div>
         <div class="item">
-            <button type="submit" class="button item">Subscribe</button>
+            <button type="submit" class="button item">Submit</button>
         </div>
 
     </form>
