--- a/Responsive Website Project/about.html
+++ b/Responsive Website Project/about.html
@@ -21,10 +21,10 @@
                         <div class="item"><a href="index.html">Home</a></div>
                     </li>
                     <li>
-                        <div class="item"><a href="about.html">About Us</a></div>
+                        <div class="item"><a href="products.html">Products</a></div>
                     </li>
                     <li>
-                        <div class="item"><a href="products.html">Products</a></div>
+                        <div class="item"><a href="about.html">About Us</a></div>
                     </li>
                     <li>
                         <div class="item"><a href="faq.html">FAQ</a></div>
@@ -37,7 +37,11 @@
         </navbar>
     </div>
 
-    <!-- Section A-->
+    <!-- Header-->
+    <header id="header">
+`       <h1>ABOUT TISSUES</h1>
+    </header>
+    
     <section>
         <h3>Why we created our company</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate explicabo libero recusandae ad repellendus aperiam optio nihil labore ea.
