--- a/Responsive Website Project/about.html
+++ b/Responsive Website Project/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/about.css">
-    <title>Tissues | About us</title>
+    <title>Tissues | About Us</title>
 </head>
 <body>
     <!--Navbar-->
@@ -38,8 +38,10 @@
     </div>
 
     <!-- Header-->
-    <section id="header-background">
-`       <h1>ABOUT TISSUES</h1>
+    <section id="container">
+        <div id="header">
+            <h1>ABOUT TISSUES</h1>
+        </div>
     </section>
     
     <!--Main Section-->
