--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -51,25 +51,28 @@
     <!--Section B-->
     <div id="section-b">
         <section>
-            <h3>We are not like other tissue brands</h3>
+            <h3>We are not like other tissue box brands</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quidem, veritatis nostrum quibusdam animi, possimus officia deleniti praesentium aut tempora perferendis hic enim facere obcaecati necessitatibus voluptate consequuntur autem placeat.
             </p>
         </section>
     </div>
     <!--Section C-->
+    <div id="section-c">
+    <section id="box">
+        <div class="link">
+            <h2>To See Our Products <a href="./products.html">Click Here</a></h2>
+        </div>
+        <div class="link">
+            <h2>To Learn More About Us <a href="./about.html">Click Here</a></h2>
+        </div>
+        <div class="link">
+            <h2>To See FAQ <a href="./faq.html">Click Here</a></h2>
+        </div>
+        <div class="link">
+            <h2>To Contact Us <a href="./contact.html">Click Here</a></h2>
+        </div>     
     <section>
-        <ul>
-            <li>
-                <h2>To See All of Our Products <a href="">Click Here</a></h2>
-            </li>
-            <li>
-                <h2>To Learn More About Us <a href="">Click Here</a></h2>
-            </li>
-            <li>
-                <h2>To Contact Us <a href="">Click Here</a></h2>
-            </li>
-        </ul>
-    <section>
+    </div>
     
    </main>
    
