--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -12,7 +12,7 @@
     <!--Navbar-->
     <div id="navbar">
         <header>
-            <div class="item image"><img class="image" src="./images/tissue-box.png"></div>
+            <div class="item image"><a href="index.html"><img class="image" src="./images/tissue-box.png"></a></div>
         </header>
 
     <navbar>
@@ -39,15 +39,12 @@
 </div>
    
    <main>
-    <!--Section A-->
-    <div id="section-a">
-        <section>
-            <h1>Welcome to Tissues | Tissue boxes that look like your favourite animals</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit placeat ducimus temporibus vel quod
-            repellendus eum nobis, asperiores possimus. Neque!
-            </p>
+    <!--Header-->
+        <section class="container">
+            <h1 class="header" id="top">Welcome to Tissues</h1>
+            <h2 class="header">Tissue boxes that look like your favourite animals</h2>
         </section>
-    </div>
+
     <!--Section B-->
     <div id="section-b">
         <section>
@@ -60,16 +57,16 @@
     <div id="section-c">
     <section id="box">
         <div class="link">
-            <h2>To See Our Products <a href="./products.html">Click Here</a></h2>
+            <h2>Our Products <br><br><br><a href="./products.html">Click Here</a></h2>
         </div>
         <div class="link">
-            <h2>To Learn More About Us <a href="./about.html">Click Here</a></h2>
+            <h2>Learn More<br>About Us<br><br><a href="./about.html">Click Here</a></h2>
         </div>
         <div class="link">
-            <h2>To See FAQ <a href="./faq.html">Click Here</a></h2>
+            <h2>To See The FAQ <br><br><br><a href="./faq.html">Click Here</a></h2>
         </div>
         <div class="link">
-            <h2>To Contact Us <a href="./contact.html">Click Here</a></h2>
+            <h2>To Contact Us <br><br><br><a href="./contact.html">Click Here</a></h2>
         </div>     
     <section>
     </div>
