--- a/Responsive Website Project/faq.html
+++ b/Responsive Website Project/faq.html
@@ -11,7 +11,7 @@
     <!--Navbar-->
     <div id="navbar">
         <header>
-            <div class="item image"><img class="image" src="./images/tissue-box.png"></div>
+            <div class="item image"><a href="index.html"><img class="image" src="./images/tissue-box.png"></a></div>
         </header>
     
         <navbar>
