made images responsive

--- a/Responsive Website Project/products.html
+++ b/Responsive Website Project/products.html
@@ -55,7 +55,7 @@
     </section>
 
     <!--Products-->
-    <div class="main">
+     <!--<div class="main">
         <section class="products">
         <div class="product" onmouseover="switchEl('cat');" onmouseout="switchBack('cat');">
             <div><img id="cat" src="./images/cat.png"><img id="cat-alt" src="./images/cat-alternate.png"></div>
@@ -73,10 +73,28 @@
             </div>
         <div class="product-name">Orange Cat Tissue Cover <br> $20</div>
         <div class="product-name">Panda Tissue Cover <br>$20</div>
-    </section></div>
-    
-    
-</section>
+    </section></div> -->
+
+    <div class="main">
+            <section class="products">
+            <div class="product">
+                <div><img src="./images/cat.png"></div>
+                <div class="product-name">Cat Tissue Cover <br> $20</div>
+            </div>
+            <div class="product">
+                <div><img src="./images/elephant.png"></div>
+                <div class="product-name">Elephant Tissue Cover <br> $20</div>
+            </div>
+            <div class="product">
+                <div><img src="./images/cat1.png"></div>
+                <div class="product-name">Orange Cat Tissue Cover <br> $20</div>
+            </div>
+            <div class="product">
+                <div><img src="./images/panda.png"></div>
+                <div class="product-name">Panda Tissue Cover <br>$20</div>
+            </div>
+        </section>
+        </div>
 <!--Form-->
 <section id="newsletter">
     <h3>Subscribe To Our Newsletter</h3>
