--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -9,40 +9,29 @@
 </head>
 <body>
    
-    <!--Navbar-->
-    <div id="navbar">
-        <header>
-            <div class="item image"><a href="index.html"><img class="image" src="./images/tissue-box.png"></a></div>
-        </header>
-
-    <navbar>
-        <div class="item">
-        <ul>
-            <li>
-                <div class="item"><a href="index.html">Home</a></div>
-            </li>
-            <li>
-                <div class="item"><a href="products.html">Products</a></div>
-            </li>
-            <li>
-                <div class="item"><a href="about.html">About Us</a></div>
-            </li>
-            <li>
-                <div class="item"><a href="faq.html">FAQ</a></div>
-            </li>
-            <li>
-                <div class="item"><a href="contact.html">Contact Us</a></div>
-            </li>
-        </ul>
-        </div>
-    </navbar>
-</div>
-   
+    <header class="header">
+        <!-- Logo -->
+        <a href="index.html" class="logo"><img src="./images/tissue-box.png"></a>
+        <!-- Hamburger icon -->
+        <input class="side-menu" type="checkbox" id="side-menu" />
+        <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+        <!-- Menu -->
+        <nav class="nav">
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a> </li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    
    <main>
     <!--Header-->
         <section class="container">
-            <h1 class="header" id="top">Welcome to Tissues</h1>
-            <h2 class="header">Tissue boxes that look like your favourite animals</h2>
+            <h1 class="showcase" id="top">Welcome to Tissues</h1>
+            <h2 class="showcase">Tissue boxes that look like your favourite animals</h2>
         </section>
 
     <!--Section B-->
