--- a/Responsive Website Project/contact.html
+++ b/Responsive Website Project/contact.html
@@ -60,27 +60,28 @@
     <form class="container">
         <div class="item">
             <div id="name">
-            <label> Name </label><br>
+            <label> Name </label>
             <input type="text" placeholder="First" class="input-box">
         </div>
             
         </div>
         <div class="item"><br>
             <div id="last-name">
-                <label></label><br>
+                <label></label>
                 <input type="text" placeholder="Last" class="input-box">
             </div>
         </div>
         <div class="item">
             <div id="email">
-                <label> Email </label><br>
-                <input type="email" class="input-box" id="email-box">
+                <label> Email </label>
+                <input type="email" placeholder="aaa@bb.ca" class="input-box" id="email-box">
             </div>
         </div>
         <div class="item">
             <div id="message">
-                <label> Message </label><br>
-                <input type="text" class="input-box" id="message-box">
+                <label> Message </label>
+                <textarea id="message-box" placeholder="Please type your message here"></textarea>
+            
         </div>
         </div>
         <div class="item">
