changed price colour

--- a/Responsive Website Project/products.html
+++ b/Responsive Website Project/products.html
@@ -79,19 +79,19 @@
             <section class="products">
             <div class="product">
                 <div><img src="./images/cat.png"></div>
-                <div class="product-name">Cat Tissue Cover <br> $20</div>
+                <div class="product-name">Cat Tissue Cover <br> <div class="price">$20</div></div>
             </div>
             <div class="product">
                 <div><img src="./images/elephant.png"></div>
-                <div class="product-name">Elephant Tissue Cover <br> $20</div>
+                <div class="product-name">Elephant Tissue Cover <br> <div class="price">$20</div></div>
             </div>
             <div class="product">
                 <div><img src="./images/cat1.png"></div>
-                <div class="product-name">Orange Cat Tissue Cover <br> $20</div>
+                <div class="product-name">Orange Cat Tissue Cover <br><div class="price">$20</div></div>
             </div>
             <div class="product">
                 <div><img src="./images/panda.png"></div>
-                <div class="product-name">Panda Tissue Cover <br>$20</div>
+                <div class="product-name">Panda Tissue Cover <br><div class="price">$20</div></div>
             </div>
         </section>
         </div>
