--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -37,25 +37,36 @@
     <!--Section B-->
     <div id="section-b">
         <section>
-            <h3>We are not like other tissue box brands</h3>
+            <h1>Customers Love Our Brand</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quidem, veritatis nostrum quibusdam animi, possimus officia deleniti praesentium aut tempora perferendis hic enim facere obcaecati necessitatibus voluptate consequuntur autem placeat.
             </p>
         </section>
     </div>
-    <!--Section C-->
-    <div id="section-c">
+
+
+    <!--Testimonials-->
+    <div id="testimonials">
     <section id="box">
-        <div class="link">
-            <h2>Our Products <br><br><br><a href="./products.html">Click Here</a></h2>
+
+        <div class="review">
+            <h3>Anonymous</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab itaque voluptatibus neque quaerat, modi reprehenderit ea, autem deserunt porro inventore eius assumenda, asperiores nulla non culpa unde. A, in officia.
+            </p>
         </div>
-        <div class="link">
-            <h2>Learn More<br>About Us<br><br><a href="./about.html">Click Here</a></h2>
+        <div class="review">
+            <h3>Anonymous</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laudantium aliquid natus ipsum reiciendis deleniti aperiam nostrum hic totam minus dolorum nemo, fuga saepe aut vel enim, minima, officiis amet.
+            </p>
         </div>
-        <div class="link">
-            <h2>To See The FAQ <br><br><br><a href="./faq.html">Click Here</a></h2>
+        <div class="review">
+            <h3>Anonymous</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, nisi quibusdam. Blanditiis omnis architecto delectus velit doloribus tenetur culpa qui magnam iusto numquam aspernatur in?
+            </p>
         </div>
-        <div class="link">
-            <h2>To Contact Us <br><br><br><a href="./contact.html">Click Here</a></h2>
+        <div class="review">
+            <h3>Anonymous</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quasi nobis animi modi hic ut quia delectus dolorem, magnam, saepe nihil atque excepturi ab veniam, cum beatae autem iusto ad?
+            </p>
         </div>     
     <section>
     </div>
