--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -50,22 +50,22 @@
 
         <div class="review">
             <h3>Anonymous</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab itaque voluptatibus neque quaerat, modi reprehenderit ea, autem deserunt porro inventore eius assumenda, asperiores nulla non culpa unde. A, in officia.
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab itaque voluptatibus neque quaerat, modi reprehenderit ea, autem deserunt porro inventore eius assumenda, asperiores nulla non culpa unde. A, in officia."
             </p>
         </div>
         <div class="review">
             <h3>Anonymous</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laudantium aliquid natus ipsum reiciendis deleniti aperiam nostrum hic totam minus dolorum nemo, fuga saepe aut vel enim, minima, officiis amet.
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laudantium aliquid natus ipsum reiciendis deleniti aperiam nostrum hic totam minus dolorum nemo, fuga saepe aut vel enim, minima, officiis amet."
             </p>
         </div>
         <div class="review">
             <h3>Anonymous</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, nisi quibusdam. Blanditiis omnis architecto delectus velit doloribus tenetur culpa qui magnam iusto numquam aspernatur in?
+            <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, nisi quibusdam. Blanditiis omnis architecto delectus velit doloribus tenetur culpa qui magnam iusto numquam aspernatur in?"
             </p>
         </div>
         <div class="review">
             <h3>Anonymous</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quasi nobis animi modi hic ut quia delectus dolorem, magnam, saepe nihil atque excepturi ab veniam, cum beatae autem iusto ad?
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quasi nobis animi modi hic ut quia delectus dolorem, magnam, saepe nihil atque excepturi ab veniam, cum beatae autem iusto ad?"
             </p>
         </div>     
     <section>
