added seperate style sheet for menu bar and footer

--- a/Responsive Website Project/faq.html
+++ b/Responsive Website Project/faq.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/faq.css">
+    <link rel="stylesheet" href="./CSS/menu-footer.css">
     <title>Tissues | FAQ</title>
 </head>
 <body>
@@ -27,7 +28,7 @@
         </nav>
     </header>
 
-    <div class="container">
+    <div class="faqs">
     <section id="header-page">
         <h1>Frequently Asked Questions</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto quis accusamus veniam suscipit. <br>Placeat numquam adipisci ex, alias qui laudantium.
