--- a/Responsive Website Project/faq.html
+++ b/Responsive Website Project/faq.html
@@ -31,7 +31,7 @@
     <div class="faqs">
     <section id="header-page">
         <h1>Frequently Asked Questions</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto quis accusamus veniam suscipit. <br>Placeat numquam adipisci ex, alias qui laudantium.
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto quis accusamus veniam suscipit. Placeat numquam adipisci ex, alias qui laudantium.
         </p>
     </section>
     
