made button in center of page

--- a/Responsive Website Project/contact.html
+++ b/Responsive Website Project/contact.html
@@ -76,7 +76,7 @@
         </div>
         </div>
         <div class="item">
-            <button type="submit" class="button item">Submit</button>
+            <div id="b"><button type="submit" class="button item">Submit</button></div>
         </div>
 
     </form>
